--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,11 @@
 :root {
+ /* шрифти */
+  --font-family-primary: "Roboto", sans-serif;
+  --font-weight-more: 700;
+  --font-weight-less: 500;
+  --font-size-more: 16px;
+  --font-size-less: 14px;
+  /* колор */
   --color-primary: #757575;
   --color-secondary: #212121;
   --color-brand: #2f303a;
@@ -15,14 +22,16 @@
   --color-header-border: #ececec;
   --color-border-box: #eeeeee;
   --color-icon: #afb1b8;
+  --color-contact-tooter: rgba(255, 255, 255, 0.6);
 }
-
 /* спадкодавець */
 body {
   background-color: var(--color-background);
   color: var(--color-primary);
-  font-family: "Roboto", sans-serif;
+  font-family: var(--font-family-primary);
+  margin: 0;
 }
+
 /* скидання властивості стилей */
 .list {
   list-style: none;
@@ -44,8 +53,8 @@ body {
   margin-bottom: 0;
   cursor: pointer;
   border-radius: 4px;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
+  font-family: inherit;
+  font-size: var(--font-size-more);
 }
 
 /* Порядок оформлення стилів:
@@ -100,12 +109,11 @@ body {
 
 .site-nav .connect {
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding: 32px 0;
   color: var(--color-secondary);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.2;
+  font-weight: var(--font-weight-less);
+  font-size: var(--font-size-less);
+  line-height: 1.143;
 }
 
 .site-nav .connect:hover,
@@ -129,13 +137,12 @@ body {
 /* Мейл. тел. */
 .contact .connect {
   display: flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding: 32px 0;
   gap: 10px;
   color: var(--color-primary);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: calc(16 / 14);
+  font-weight: var(--font-weight-less);
+  font-size: var(--font-size-less);
+  line-height: 1.143;
 }
 
 .contact .connect:hover,
@@ -154,7 +161,7 @@ body {
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
-  max-width: 1600px;
+  /* max-width: 1600px; */
   margin-right: auto;
   margin-left: auto;
   background-color: var(--color-brand);
@@ -168,16 +175,16 @@ body {
 .hero-title {
   margin-top: 0;
   margin-bottom: 30px;
+  margin-right: auto;
+  margin-left: auto;
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 0.06em;
   width: 696px;
-  margin-right: auto;
-  margin-left: auto;
   color: var(--color-hero);
   font-weight: 900;
   font-size: 44px;
-  line-height: 1.4;
+  line-height: 1.364;
 }
 
 .button-hero {
@@ -188,8 +195,8 @@ body {
   color: var(--color-white);
   background-color: var(--color-accent);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  font-weight: 700;
-  line-height: calc(30 / 16);
+  font-weight: var(--font-weight-more);
+  line-height: 1.9;
 }
 /* активна кнопка в герої*/
 .button-hero:hover,
@@ -247,9 +254,9 @@ body {
   text-align: center;
 
   color: var(--color-secondary);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.2;
+  font-weight: var(--font-weight-more);
+  font-size: var(--font-size-less);
+  line-height: 1.143;
 }
 
 .member {
@@ -265,7 +272,7 @@ body {
   margin-bottom: 50px;
   text-align: center;
   color: var(--color-secondary);
-  font-weight: 700;
+  font-weight: var(--font-weight-more);
   font-size: 36px;
   line-height: 1.2;
 }
@@ -306,7 +313,7 @@ body {
   margin-bottom: 16px;
   text-align: center;
 
-  font-size: 16px;
+  font-size: var(--font-size-more);
   line-height: 1.2;
 }
 
@@ -400,9 +407,9 @@ body {
 .reach {
   color: var(--color-white);
   font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7;
+  font-weight: inherit;
+  font-size: var(--font-size-less);
+  line-height: 1.714;
 }
 
 .reach:hover,
@@ -413,9 +420,9 @@ body {
 .contact-address {
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7;
+  font-weight: inherit;
+  font-size: var(--font-size-less);
+  line-height: 1.714;
 }
 
 .contact-address:hover,
@@ -460,8 +467,8 @@ body {
   padding: 6px 22px;
   color: var(--color-secondary);
   background: var(--color-background-light);
-  font-weight: 500;
-  line-height: calc(26 / 16);
+  font-weight: var(--font-weight-less);
+  line-height: 1.625;
 }
 
 .button-filter:hover,
@@ -471,6 +478,7 @@ body {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+
 .button-filter:active {
   background-color: var(--color-activ-btn);
 }
@@ -480,6 +488,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   box-sizing: border-box;
+
 }
 .portfolio-box {
   width: calc((100% - 60px) / 3);
@@ -489,10 +498,12 @@ body {
 
 .portfolio-box:nth-child(3n) {
   margin-right: 0;
-}
+} 
+
 .portfolio-box:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
+
 .portfolio-box > .text-content {
   padding: 20px 24px;
   border: 1px solid var(--color-border-box);
@@ -508,22 +519,24 @@ body {
 .post-text {
   margin-top: 0px;
   margin-bottom: 0px;
-  font-size: 14px;
-  line-height: 1.3;
+  font-size: var(--font-size-less);
+  line-height: 1.714;
 }
+
 .box-subtitle {
   margin: 0;
   color: var(--color-secondary);
-  font-weight: 700;
+  font-weight: var(--font-weight-more);
   font-size: 18px;
-  line-height: 36px;
+  line-height: 2;
   letter-spacing: 0.06em;
 }
+
 .desc {
   margin: 0;
   margin-top: 4px;
   color: var(--color-primary);
-  font-size: 16px;
+  font-size: var(--font-size-more);
   line-height: 1.9;
   letter-spacing: 0.03em;
 }
