--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@
   --color-icon: #afb1b8;
   --color-contact-tooter: rgba(255, 255, 255, 0.6);
 }
+
 /* спадкодавець */
 body {
   background-color: var(--color-background);
@@ -65,8 +66,7 @@ body {
 /* Оформлення блоків */
 .container {
   width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   padding: 0 15px;
 }
 
@@ -532,6 +532,9 @@ body {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .desc {
