--- a/css/styles.css
+++ b/css/styles.css
@@ -489,21 +489,10 @@ body {
 .portfolio {
   display: flex;
   flex-wrap: wrap;
-  box-sizing: border-box;
-
+  gap: 30px;
 }
 .portfolio-box {
-  width: calc((100% - 60px) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
-
-.portfolio-box:nth-child(3n) {
-  margin-right: 0;
-} 
-
-.portfolio-box:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+  flex-basis: calc((100% - 60px) / 3);
 }
 
 .portfolio-box > .text-content {
