--- a/css/styles.css
+++ b/css/styles.css
@@ -102,9 +102,7 @@ body {
 }
 .site-nav {
   display: flex;
-}
-.site-nav .item + .item {
-  margin-left: 50px;
+  gap: 50px;
 }
 
 .site-nav .connect {
@@ -129,11 +127,9 @@ body {
 .contact {
   display: flex;
   margin-left: auto;
+  gap: 50px;
 }
 
-.contact .item + .item {
-  margin-left: 50px;
-}
 /* Мейл. тел. */
 .contact .connect {
   display: flex;
@@ -161,9 +157,8 @@ body {
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
-  /* max-width: 1600px; */
-  margin-right: auto;
-  margin-left: auto;
+  max-width: 1600px;
+  margin: 0 auto;
   background-color: var(--color-brand);
   background-image: linear-gradient(to right, var(--color-img-overlay), var(--color-img-overlay)),
     url(../images/studio/Img-team.jpeg);
@@ -215,7 +210,7 @@ body {
   display: flex;
   max-width: 1170px;
   height: 248px;
-  margin-left: 0;
+  gap: 30px;
 }
 
 .visually-hidden {
@@ -233,12 +228,8 @@ body {
 
 .list-merit {
   width: 270px;
-  margin-left: 30px;
 }
 
-.list-merit:first-child {
-  margin-left: 0;
-}
 
 .thumb {
   display: flex;
@@ -281,12 +272,7 @@ body {
 
 .work {
   display: flex;
-}
-.work-foto {
-  margin-left: 30px;
-}
-.work-foto:first-child {
-  margin-left: 0;
+  gap: 30px;
 }
 
 /* наша команда */
@@ -296,18 +282,14 @@ body {
 
 .team {
   display: flex;
+  gap: 30px;
 }
 
 .team-list {
-  margin-left: 30px;
   background-color: var(--color-white);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
-
-.team-list:first-child {
-  margin-left: 0;
 }
 
 .desc-text {
@@ -324,8 +306,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   gap: 10px;
   margin-bottom: 30px;
 }
@@ -356,14 +337,7 @@ body {
 /* Постійні кліенти */
 .clients {
   display: flex;
-}
-.clients-card {
-  display: flex;
-  margin-left: 30px;
-}
-
-.clients-card:nth-child(1) {
-  margin-left: 0;
+  gap: 30px;
 }
 
 .clients-link {
@@ -508,8 +482,6 @@ body {
 }
 
 .post-text {
-  margin-top: 0px;
-  margin-bottom: 0px;
   font-size: var(--font-size-less);
   line-height: 1.714;
 }
@@ -535,4 +507,4 @@ body {
   letter-spacing: 0.03em;
 }
 
-/* чи буде кращим використати для фону у герої контейнер .container-fluid ? */
+
