--- a/css/styles.css
+++ b/css/styles.css
@@ -42,11 +42,14 @@ body {
 
 .image {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
-.connect {
+.link {
   text-decoration: none;
 }
+
 /* кнопка загальні властивості */
 .button {
   border: none;
@@ -138,6 +141,7 @@ body {
   color: var(--color-primary);
   font-weight: var(--font-weight-less);
   font-size: var(--font-size-less);
+  fill: currentColor;
   line-height: 1.143;
 }
 
@@ -149,7 +153,6 @@ body {
 /* іконки мейл. тел. */
 .connect .icon {
   align-self: center;
-  fill: currentColor;
 }
 
 /* hero */
@@ -312,20 +315,26 @@ body {
 }
 
 /* посилання на соцмережи */
+.social-item {
+   width: 44px;
+  height: 44px;
+}
+
 .item .social-link {
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  width: 44px;
-  height: 44px;
+  width: 100%;
+  height: 100%;
   color: var(--color-icon);
+  fill: currentColor;
+
 }
 
 .social-link .icon {
   width: 20px;
   height: 20px;
-  fill: currentColor;
 }
 
 .item .social-link:hover,
@@ -340,17 +349,23 @@ body {
   gap: 30px;
 }
 
-.clients-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.clients-item {
   width: 170px;
   height: 92px;
 }
 
+.clients-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  
+}
+
 .clients-link .thumb-icon {
-  width: 170px;
-  height: 92px;
+width: 100%;
+  height: 100%;
   fill: var(--color-icon);
   padding: 0 32px;
   border: 1px solid var(--color-icon);
@@ -374,12 +389,17 @@ body {
   color: var(--color-logo-footer);
 }
 /* address */
+.address {
+margin-top: 20px;
+}
+
 .list-item {
-  margin-top: 9px;
+  margin-bottom: 9px;
 }
-.list-item:first-child {
-  margin-top: 20px;
+.list-item:last-child {
+  margin-bottom: 0;
 }
+
 .reach {
   color: var(--color-white);
   font-style: normal;
@@ -469,7 +489,7 @@ body {
   flex-basis: calc((100% - 60px) / 3);
 }
 
-.portfolio-box > .text-content {
+.text-content {
   padding: 20px 24px;
   border: 1px solid var(--color-border-box);
   border-top: 0;
