--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 :root {
- /* шрифти */
-  --font-family-primary: "Roboto", sans-serif;
+  /* шрифти */
+  --font-family-primary: 'Roboto', sans-serif;
   --font-weight-more: 700;
   --font-weight-less: 500;
   --font-size-more: 16px;
@@ -87,7 +87,7 @@ body {
 .logo-link {
   margin-right: 93px;
   color: var(--color-logo);
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
@@ -218,21 +218,20 @@ body {
 
 .visually-hidden {
   position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
 
 .list-merit {
   width: 270px;
 }
-
 
 .thumb {
   display: flex;
@@ -316,7 +315,7 @@ body {
 
 /* посилання на соцмережи */
 .social-item {
-   width: 44px;
+  width: 44px;
   height: 44px;
 }
 
@@ -329,7 +328,6 @@ body {
   height: 100%;
   color: var(--color-icon);
   fill: currentColor;
-
 }
 
 .social-link .icon {
@@ -360,11 +358,10 @@ body {
   justify-content: center;
   width: 100%;
   height: 100%;
-  
 }
 
 .clients-link .thumb-icon {
-width: 100%;
+  width: 100%;
   height: 100%;
   fill: var(--color-icon);
   padding: 0 32px;
@@ -390,7 +387,7 @@ width: 100%;
 }
 /* address */
 .address {
-margin-top: 20px;
+  margin-top: 20px;
 }
 
 .list-item {
@@ -526,5 +523,3 @@ margin-top: 20px;
   line-height: 1.9;
   letter-spacing: 0.03em;
 }
-
-
