--- a/css/styles.css
+++ b/css/styles.css
@@ -436,6 +436,7 @@ body {
   line-height: calc(16.41 / 14);
   letter-spacing: 0.03em;
   color: var(--color-white);
+  margin: 0;
   margin-bottom: 20px;
 }
 
